--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Info</artifactId>
+    <artifactId>info</artifactId>
     <groupId>com.ulfric.info</groupId>
     <description>Info management plugin</description>
     <version>1.0.0</version>
@@ -16,8 +16,8 @@
     <dependencies>
         <dependency>
             <groupId>com.ulfric.lib</groupId>
-            <artifactId>Lib</artifactId>
-            <version>10.0.71</version>
+            <artifactId>lib</artifactId>
+            <version>10.0.74</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
